// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Settings /> can navigate Autoplay Settings 1`] = `
<div
  class="mockedEuiPortal"
>
  <div
    data-eui="EuiFocusTrap"
  >
    <div
      aria-describedby="generated-id"
      aria-live="off"
      aria-modal="true"
      class="euiPanel euiPanel--plain euiPopover__panel emotion-euiPanel-grow-m-plain-euiPopover__panel-light-hasTransform"
      data-popover-panel="true"
      role="dialog"
      style="top: -16px; left: -22px; will-change: transform, opacity; z-index: 2000;"
      tabindex="0"
    >
      <div
        class="euiPopover__arrow emotion-euiPopoverArrow-top"
        data-popover-arrow="top"
        style="left: 10px; top: 0px;"
      />
      <p
        class="emotion-euiScreenReaderOnly"
        id="generated-id"
      >
        You are in a dialog. Press Escape, or tap/click outside the dialog to close.
      </p>
      <div>
        <div
          class="euiContextMenu emotion-euiContextMenu"
          style="height: 0px;"
        >
          <div
            class="euiContextMenuPanel emotion-euiContextMenuPanel-euiContextMenu__panel"
            tabindex="-1"
          >
            <div
              class="euiContextMenuItem euiContextMenuPanel__title emotion-euiContextMenuItem-m-center-euiContextMenuPanel__title"
              data-test-subj="contextMenuPanelTitle"
            >
              <span
                class="euiContextMenuItem__text emotion-euiContextMenuItem__text"
              >
                Settings
              </span>
            </div>
            <div>
              <button
                class="euiContextMenuItem emotion-euiContextMenuItem-m-center"
                type="button"
              >
                <span
                  class="euiContextMenu__icon emotion-euiContextMenu__icon"
                  color="inherit"
                  data-euiicon-type="play"
                />
                <span
                  class="euiContextMenuItem__text emotion-euiContextMenuItem__text"
                >
                  Auto Play
                </span>
                <span
                  class="euiContextMenu__arrow emotion-euiContextMenuItem__arrow"
                  data-euiicon-type="arrowRight"
                />
              </button>
              <button
                class="euiContextMenuItem emotion-euiContextMenuItem-m-center"
                type="button"
              >
                <span
                  class="euiContextMenu__icon emotion-euiContextMenu__icon"
                  color="inherit"
                  data-euiicon-type="boxesHorizontal"
                />
                <span
                  class="euiContextMenuItem__text emotion-euiContextMenuItem__text"
                >
                  Toolbar
                </span>
                <span
                  class="euiContextMenu__arrow emotion-euiContextMenuItem__arrow"
                  data-euiicon-type="arrowRight"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Settings /> can navigate Autoplay Settings 2`] = `
<div
  class="mockedEuiPortal"
>
  <div
    data-eui="EuiFocusTrap"
  >
    <div
      aria-describedby="generated-id"
      aria-live="off"
      aria-modal="true"
      class="euiPanel euiPanel--plain euiPopover__panel emotion-euiPanel-grow-m-plain-euiPopover__panel-light-isOpen-hasTransform-top"
      data-popover-open="true"
      data-popover-panel="true"
      role="dialog"
      style="top: -16px; left: -22px; z-index: 2000;"
      tabindex="0"
    >
      <div
        class="euiPopover__arrow emotion-euiPopoverArrow-top"
        data-popover-arrow="top"
        style="left: 10px; top: 0px;"
      />
      <p
        class="emotion-euiScreenReaderOnly"
        id="generated-id"
      >
        You are in a dialog. Press Escape, or tap/click outside the dialog to close.
      </p>
      <div>
        <div
          class="euiContextMenu emotion-euiContextMenu"
          style="height: 0px;"
        >
          <div
            class="euiContextMenuPanel emotion-euiContextMenuPanel-transitioning-out-euiContextMenu__panel"
            tabindex="-1"
          >
            <div
              class="euiContextMenuItem euiContextMenuPanel__title emotion-euiContextMenuItem-m-center-euiContextMenuPanel__title"
              data-test-subj="contextMenuPanelTitle"
            >
              <span
                class="euiContextMenuItem__text emotion-euiContextMenuItem__text"
              >
                Settings
              </span>
            </div>
            <div>
              <button
                class="euiContextMenuItem emotion-euiContextMenuItem-m-center"
                type="button"
              >
                <span
                  class="euiContextMenu__icon emotion-euiContextMenu__icon"
                  color="inherit"
                  data-euiicon-type="play"
                />
                <span
                  class="euiContextMenuItem__text emotion-euiContextMenuItem__text"
                >
                  Auto Play
                </span>
                <span
                  class="euiContextMenu__arrow emotion-euiContextMenuItem__arrow"
                  data-euiicon-type="arrowRight"
                />
              </button>
              <button
                class="euiContextMenuItem emotion-euiContextMenuItem-m-center"
                type="button"
              >
                <span
                  class="euiContextMenu__icon emotion-euiContextMenu__icon"
                  color="inherit"
                  data-euiicon-type="boxesHorizontal"
                />
                <span
                  class="euiContextMenuItem__text emotion-euiContextMenuItem__text"
                >
                  Toolbar
                </span>
                <span
                  class="euiContextMenu__arrow emotion-euiContextMenuItem__arrow"
                  data-euiicon-type="arrowRight"
                />
              </button>
            </div>
          </div>
          <div
            class="euiContextMenuPanel emotion-euiContextMenuPanel-transitioning-in-euiContextMenu__panel"
            tabindex="-1"
          >
            <button
              class="euiContextMenuItem euiContextMenuPanel__title emotion-euiContextMenuItem-m-center-euiContextMenuPanel__title"
              data-test-subj="contextMenuPanelTitleButton"
              type="button"
            >
              <span
                class="euiContextMenu__icon emotion-euiContextMenu__icon"
                color="inherit"
                data-euiicon-type="arrowLeft"
              />
              <span
                class="euiContextMenuItem__text emotion-euiContextMenuItem__text"
              >
                Auto Play
              </span>
            </button>
            <div>
              <div
                style="padding: 16px;"
              >
                <div
                  class="euiSwitch emotion-euiSwitch"
                >
                  <button
                    aria-checked="false"
                    aria-labelledby="generated-id"
                    class="euiSwitch__button emotion-euiSwitch__button"
                    id="cycle"
                    name="cycle"
                    role="switch"
                    type="button"
                  >
                    <span
                      class="euiSwitch__body emotion-euiSwitch__body-off"
                    >
                      <span
                        class="euiSwitch__icons emotion-euiSwitch__icons-off-enabled"
                      >
                        <span
                          data-euiicon-type="check"
                        />
                        <span
                          data-euiicon-type="cross"
                        />
                      </span>
                    </span>
                    <span
                      class="euiSwitch__thumb emotion-euiSwitch__thumb-off"
                    />
                  </button>
                  <span
                    class="euiSwitch__label emotion-euiSwitch__label"
                    id="generated-id"
                  >
                    Cycle Slides
                  </span>
                </div>
                <hr
                  class="euiHorizontalRule emotion-euiHorizontalRule-full-m"
                />
                <form>
                  <div
                    class="euiFlexGroup emotion-euiFlexGroup-responsive-s-flexStart-stretch-row"
                  >
                    <div
                      class="euiFlexItem emotion-euiFlexItem-grow-1"
                    >
                      <div
                        class="euiFormRow euiFormRow--hasLabel emotion-euiFormRow"
                        id="generated-id-row"
                      >
                        <div
                          class="euiFormRow__labelWrapper"
                        >
                          <label
                            class="euiFormLabel euiFormRow__label emotion-euiFormLabel"
                            for="generated-id"
                            id="generated-id-label"
                          >
                            Set a custom interval
                          </label>
                        </div>
                        <div
                          class="euiFormRow__fieldWrapper"
                        >
                          <div
                            class="euiFormControlLayout emotion-euiFormControlLayout-compressed"
                          >
                            <div
                              class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper"
                            >
                              <input
                                aria-describedby="generated-id-help-0"
                                class="euiFieldText emotion-euiFieldText-compressed"
                                id="generated-id"
                                type="text"
                                value="5s"
                              />
                            </div>
                          </div>
                          <div
                            class="euiFormHelpText euiFormRow__text emotion-euiFormHelpText"
                            id="generated-id-help-0"
                          >
                            Use shorthand notation, like 30s, 10m, or 1h
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="euiFlexItem emotion-euiFlexItem-growZero"
                    >
                      <div
                        class="euiFormRow euiFormRow--hasEmptyLabelSpace emotion-euiFormRow"
                        id="generated-id-row"
                      >
                        <div
                          class="euiSpacer euiSpacer--m euiFormRow__labelWrapper emotion-euiSpacer-m"
                        />
                        <div
                          class="euiFormRow__fieldWrapper"
                        >
                          <button
                            class="euiButton emotion-euiButtonDisplay-s-base-primary"
                            id="generated-id"
                            style="min-inline-size: auto;"
                            type="submit"
                          >
                            <span
                              class="emotion-euiButtonDisplayContent"
                            >
                              <span
                                class="eui-textTruncate"
                              >
                                Set
                              </span>
                            </span>
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Settings /> can navigate Toolbar Settings, closes when activated 1`] = `
<div
  class="mockedEuiPortal"
>
  <div
    data-eui="EuiFocusTrap"
  >
    <div
      aria-describedby="generated-id"
      aria-live="off"
      aria-modal="true"
      class="euiPanel euiPanel--plain euiPopover__panel emotion-euiPanel-grow-m-plain-euiPopover__panel-light-hasTransform"
      data-popover-panel="true"
      role="dialog"
      style="top: -16px; left: -22px; will-change: transform, opacity; z-index: 2000;"
      tabindex="0"
    >
      <div
        class="euiPopover__arrow emotion-euiPopoverArrow-top"
        data-popover-arrow="top"
        style="left: 10px; top: 0px;"
      />
      <p
        class="emotion-euiScreenReaderOnly"
        id="generated-id"
      >
        You are in a dialog. Press Escape, or tap/click outside the dialog to close.
      </p>
      <div>
        <div
          class="euiContextMenu emotion-euiContextMenu"
          style="height: 0px;"
        >
          <div
            class="euiContextMenuPanel emotion-euiContextMenuPanel-euiContextMenu__panel"
            tabindex="-1"
          >
            <div
              class="euiContextMenuItem euiContextMenuPanel__title emotion-euiContextMenuItem-m-center-euiContextMenuPanel__title"
              data-test-subj="contextMenuPanelTitle"
            >
              <span
                class="euiContextMenuItem__text emotion-euiContextMenuItem__text"
              >
                Settings
              </span>
            </div>
            <div>
              <button
                class="euiContextMenuItem emotion-euiContextMenuItem-m-center"
                type="button"
              >
                <span
                  class="euiContextMenu__icon emotion-euiContextMenu__icon"
                  color="inherit"
                  data-euiicon-type="play"
                />
                <span
                  class="euiContextMenuItem__text emotion-euiContextMenuItem__text"
                >
                  Auto Play
                </span>
                <span
                  class="euiContextMenu__arrow emotion-euiContextMenuItem__arrow"
                  data-euiicon-type="arrowRight"
                />
              </button>
              <button
                class="euiContextMenuItem emotion-euiContextMenuItem-m-center"
                type="button"
              >
                <span
                  class="euiContextMenu__icon emotion-euiContextMenu__icon"
                  color="inherit"
                  data-euiicon-type="boxesHorizontal"
                />
                <span
                  class="euiContextMenuItem__text emotion-euiContextMenuItem__text"
                >
                  Toolbar
                </span>
                <span
                  class="euiContextMenu__arrow emotion-euiContextMenuItem__arrow"
                  data-euiicon-type="arrowRight"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Settings /> can navigate Toolbar Settings, closes when activated 2`] = `
<div
  class="mockedEuiPortal"
>
  <div
    data-eui="EuiFocusTrap"
  >
    <div
      aria-describedby="generated-id"
      aria-live="off"
      aria-modal="true"
      class="euiPanel euiPanel--plain euiPopover__panel emotion-euiPanel-grow-m-plain-euiPopover__panel-light-isOpen-hasTransform-top"
      data-popover-open="true"
      data-popover-panel="true"
      role="dialog"
      style="top: -16px; left: -22px; z-index: 2000;"
      tabindex="0"
    >
      <div
        class="euiPopover__arrow emotion-euiPopoverArrow-top"
        data-popover-arrow="top"
        style="left: 10px; top: 0px;"
      />
      <p
        class="emotion-euiScreenReaderOnly"
        id="generated-id"
      >
        You are in a dialog. Press Escape, or tap/click outside the dialog to close.
      </p>
      <div>
        <div
          class="euiContextMenu emotion-euiContextMenu"
          style="height: 0px;"
        >
          <div
            class="euiContextMenuPanel emotion-euiContextMenuPanel-transitioning-out-euiContextMenu__panel"
            tabindex="-1"
          >
            <div
              class="euiContextMenuItem euiContextMenuPanel__title emotion-euiContextMenuItem-m-center-euiContextMenuPanel__title"
              data-test-subj="contextMenuPanelTitle"
            >
              <span
                class="euiContextMenuItem__text emotion-euiContextMenuItem__text"
              >
                Settings
              </span>
            </div>
            <div>
              <button
                class="euiContextMenuItem emotion-euiContextMenuItem-m-center"
                type="button"
              >
                <span
                  class="euiContextMenu__icon emotion-euiContextMenu__icon"
                  color="inherit"
                  data-euiicon-type="play"
                />
                <span
                  class="euiContextMenuItem__text emotion-euiContextMenuItem__text"
                >
                  Auto Play
                </span>
                <span
                  class="euiContextMenu__arrow emotion-euiContextMenuItem__arrow"
                  data-euiicon-type="arrowRight"
                />
              </button>
              <button
                class="euiContextMenuItem emotion-euiContextMenuItem-m-center"
                type="button"
              >
                <span
                  class="euiContextMenu__icon emotion-euiContextMenu__icon"
                  color="inherit"
                  data-euiicon-type="boxesHorizontal"
                />
                <span
                  class="euiContextMenuItem__text emotion-euiContextMenuItem__text"
                >
                  Toolbar
                </span>
                <span
                  class="euiContextMenu__arrow emotion-euiContextMenuItem__arrow"
                  data-euiicon-type="arrowRight"
                />
              </button>
            </div>
          </div>
          <div
            class="euiContextMenuPanel emotion-euiContextMenuPanel-transitioning-in-euiContextMenu__panel"
            tabindex="-1"
          >
            <button
              class="euiContextMenuItem euiContextMenuPanel__title emotion-euiContextMenuItem-m-center-euiContextMenuPanel__title"
              data-test-subj="contextMenuPanelTitleButton"
              type="button"
            >
              <span
                class="euiContextMenu__icon emotion-euiContextMenu__icon"
                color="inherit"
                data-euiicon-type="arrowLeft"
              />
              <span
                class="euiContextMenuItem__text emotion-euiContextMenuItem__text"
              >
                Toolbar
              </span>
            </button>
            <div>
              <div
                style="padding: 16px;"
              >
                <div
                  class="euiFormRow emotion-euiFormRow"
                  id="generated-id-row"
                >
                  <div
                    class="euiFormRow__fieldWrapper"
                  >
                    <div
                      class="euiSwitch emotion-euiSwitch"
                    >
                      <button
                        aria-checked="false"
                        aria-describedby="generated-id-help-0"
                        aria-labelledby="generated-id"
                        class="euiSwitch__button emotion-euiSwitch__button"
                        data-test-subj="hideToolbarSwitch"
                        id="generated-id"
                        name="toolbarHide"
                        role="switch"
                        type="button"
                      >
                        <span
                          class="euiSwitch__body emotion-euiSwitch__body-off"
                        >
                          <span
                            class="euiSwitch__icons emotion-euiSwitch__icons-off-enabled"
                          >
                            <span
                              data-euiicon-type="check"
                            />
                            <span
                              data-euiicon-type="cross"
                            />
                          </span>
                        </span>
                        <span
                          class="euiSwitch__thumb emotion-euiSwitch__thumb-off"
                        />
                      </button>
                      <span
                        class="euiSwitch__label emotion-euiSwitch__label"
                        id="generated-id"
                      >
                        Hide Toolbar
                      </span>
                    </div>
                    <div
                      class="euiFormHelpText euiFormRow__text emotion-euiFormHelpText"
                      id="generated-id-help-0"
                    >
                      Hide the toolbar when the mouse is not within the Canvas?
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Settings /> can navigate Toolbar Settings, closes when activated 3`] = `
<div
  class="mockedEuiPortal"
>
  <div
    data-eui="EuiFocusTrap"
  >
    <div
      aria-describedby="generated-id"
      aria-live="off"
      aria-modal="true"
      class="euiPanel euiPanel--plain euiPopover__panel emotion-euiPanel-grow-m-plain-euiPopover__panel-light-hasTransform"
      data-popover-panel="true"
      role="dialog"
      style="top: -16px; left: -22px; z-index: 2000;"
      tabindex="0"
    >
      <div
        class="euiPopover__arrow emotion-euiPopoverArrow-top"
        data-popover-arrow="top"
        style="left: 10px; top: 0px;"
      />
      <p
        class="emotion-euiScreenReaderOnly"
        id="generated-id"
      >
        You are in a dialog. Press Escape, or tap/click outside the dialog to close.
      </p>
      <div>
        <div
          class="euiContextMenu emotion-euiContextMenu"
          style="height: 0px;"
        >
          <div
            class="euiContextMenuPanel emotion-euiContextMenuPanel-transitioning-out-euiContextMenu__panel"
            tabindex="-1"
          >
            <div
              class="euiContextMenuItem euiContextMenuPanel__title emotion-euiContextMenuItem-m-center-euiContextMenuPanel__title"
              data-test-subj="contextMenuPanelTitle"
            >
              <span
                class="euiContextMenuItem__text emotion-euiContextMenuItem__text"
              >
                Settings
              </span>
            </div>
            <div>
              <button
                class="euiContextMenuItem emotion-euiContextMenuItem-m-center"
                type="button"
              >
                <span
                  class="euiContextMenu__icon emotion-euiContextMenu__icon"
                  color="inherit"
                  data-euiicon-type="play"
                />
                <span
                  class="euiContextMenuItem__text emotion-euiContextMenuItem__text"
                >
                  Auto Play
                </span>
                <span
                  class="euiContextMenu__arrow emotion-euiContextMenuItem__arrow"
                  data-euiicon-type="arrowRight"
                />
              </button>
              <button
                class="euiContextMenuItem emotion-euiContextMenuItem-m-center"
                type="button"
              >
                <span
                  class="euiContextMenu__icon emotion-euiContextMenu__icon"
                  color="inherit"
                  data-euiicon-type="boxesHorizontal"
                />
                <span
                  class="euiContextMenuItem__text emotion-euiContextMenuItem__text"
                >
                  Toolbar
                </span>
                <span
                  class="euiContextMenu__arrow emotion-euiContextMenuItem__arrow"
                  data-euiicon-type="arrowRight"
                />
              </button>
            </div>
          </div>
          <div
            class="euiContextMenuPanel emotion-euiContextMenuPanel-transitioning-in-euiContextMenu__panel"
            tabindex="-1"
          >
            <button
              class="euiContextMenuItem euiContextMenuPanel__title emotion-euiContextMenuItem-m-center-euiContextMenuPanel__title"
              data-test-subj="contextMenuPanelTitleButton"
              type="button"
            >
              <span
                class="euiContextMenu__icon emotion-euiContextMenu__icon"
                color="inherit"
                data-euiicon-type="arrowLeft"
              />
              <span
                class="euiContextMenuItem__text emotion-euiContextMenuItem__text"
              >
                Toolbar
              </span>
            </button>
            <div>
              <div
                style="padding: 16px;"
              >
                <div
                  class="euiFormRow emotion-euiFormRow"
                  id="generated-id-row"
                >
                  <div
                    class="euiFormRow__fieldWrapper"
                  >
                    <div
                      class="euiSwitch emotion-euiSwitch"
                    >
                      <button
                        aria-checked="true"
                        aria-describedby="generated-id-help-0"
                        aria-labelledby="generated-id"
                        class="euiSwitch__button emotion-euiSwitch__button"
                        data-test-subj="hideToolbarSwitch"
                        id="generated-id"
                        name="toolbarHide"
                        role="switch"
                        type="button"
                      >
                        <span
                          class="euiSwitch__body emotion-euiSwitch__body-on"
                        >
                          <span
                            class="euiSwitch__icons emotion-euiSwitch__icons-on-enabled"
                          >
                            <span
                              data-euiicon-type="check"
                            />
                            <span
                              data-euiicon-type="cross"
                            />
                          </span>
                        </span>
                        <span
                          class="euiSwitch__thumb emotion-euiSwitch__thumb-on"
                        />
                      </button>
                      <span
                        class="euiSwitch__label emotion-euiSwitch__label"
                        id="generated-id"
                      >
                        Hide Toolbar
                      </span>
                    </div>
                    <div
                      class="euiFormHelpText euiFormRow__text emotion-euiFormHelpText"
                      id="generated-id-help-0"
                    >
                      Hide the toolbar when the mouse is not within the Canvas?
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
